# aoc2023

haskell/: .gitignore  aoc.cabal  main.hs
haskell/app/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
rust/: .gitignore
rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs
