cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexey Artyushin
maintainer:         shinxey1@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable aoc2023
    main-is:          Main.hs
    other-modules:    Day1
                      Day2
                      Day3
                      Day4
                      Day5
                      Day6
                      Day7
                      Day8

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                      , split
                      , containers
    hs-source-dirs:   app
    default-language: Haskell2010
