cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

author:             Alexey Artyushin
maintainer:         shinxey1@gmail.com

executable aoc2023
    main-is:          Main.hs
    other-modules:    Day1
                      Day2
                      Day3
                      Day4
                      Day5
                      Day6
                      Day7
                      Day8
                      Day9

    build-depends:    base ^>=4.17.2.0
                      , split
                      , containers
    hs-source-dirs:   app
    default-language: Haskell2010
